add bucket filters
